# winzig

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  feeds.txt  main.py  posts  pyproject.toml  requirements.txt  urls
crawler/: crawler.py
database/: database.py
winzig/: commands.py  config.py  crawler.py  database.py  idf.py  main.py  management.py  models.py  search_engine.py  tf_idf.py  tui.py  tui.tcss  utils.py
winzig/commands/: __init__.py  crawl.py  export.py  search.py  tui.py
