[tool.poetry]
name = "winzig"
version = "0.1.4"
description = "A tiny search engine for personal use."
authors = ["dnlzrgz <24715931+dnlzrgz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dnlzrgz/winzig"
keywords = ["search", "crawl", "sqlite", "async", "feeds"]


[tool.poetry.dependencies]
python = "^3.12"
feedparser = "^6.0.11"
httpx = "^0.27.0"
selectolax = "^0.3.20"
rich = "^13.7.1"
sqlmodel = "^0.0.16"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pre-commit = "^3.6.2"
commitizen = "^3.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
winzig = "winzig.main:cli"
